service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: frontend-service
  labels:
    app: frontend-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 80
